@@ -45,7 +45,7 @@ namespace Gremlin.Net.Structure.IO.GraphSON
                 ? labelProperty.GetString()!
                 : "edge";
 
-            dynamic[]? properties = null;
+            dynamic[] properties = System.Array.Empty<dynamic>();
             if (graphsonObject.TryGetProperty("properties", out var propertiesObject)
                 && propertiesObject.ValueKind == JsonValueKind.Object)
             {
