@@ -36,7 +36,7 @@ namespace Gremlin.Net.Structure.IO.GraphSON
                 ? labelProperty.GetString()!
                 : Vertex.DefaultLabel;
 
-            dynamic[]? properties = null;
+            dynamic[] properties = System.Array.Empty<dynamic>();
             if (graphsonObject.TryGetProperty("properties", out var propertiesObject)
                 && propertiesObject.ValueKind == JsonValueKind.Object)
             {
